Reverted change of video URL

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <h2>Presentations</h2>
   <ul>
-    <li>&quot;cFS Applications in Rust with <tt>n2o4</tt>&quot;. Presented at the <a href="https://flightsoftware.org/workshop/FSW2023">16th Annual Workshop on Spacecraft Flight Software</a> (FSW 2023), Pasadena, CA, USA, March 2023. <a href="fsw2023-n2o4.pdf">slides</a> <a href="https://www.youtube.com/watch?v=ifa7bxm6cEY">video</a></li>
+    <li>&quot;cFS Applications in Rust with <tt>n2o4</tt>&quot;. Presented at the <a href="https://flightsoftware.org/workshop/FSW2023">16th Annual Workshop on Spacecraft Flight Software</a> (FSW 2023), Pasadena, CA, USA, March 2023. <a href="fsw2023-n2o4.pdf">slides</a> <a href="https://www.youtube.com/live/H7q-7CNb7gc?si=zgWjLlaCxNHJfRJq&t=8229">video</a></li>
   </ul>
 </body>
 </html>
